getAuthor by material ID
